# DAgent

./: Cargo.toml  README.md  build_install.sh
src/: app.rs  main.rs  memory.rs  orchestrator.rs  skills.rs  ui.rs
src/app/: commands.rs  dispatch.rs  input.rs  mod.rs  render.rs  runtime.rs  session.rs  tests.rs  text.rs  types.rs  ui.rs  worker.rs
src/providers/: claude.rs  codex.rs  mod.rs
