[package]
name = "dagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
crossbeam-channel = "0.5"
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
unicode-width = "0.1"
