[package]
name = "dagent"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.28.1"
crossbeam-channel = "0.5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "scrolling-regions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
unicode-width = "0.2"
libc = "0.2"
